--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@remixicon/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.15",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
