--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@remixicon/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.15",
+    "lenis": "^1.3.11",
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
+    "react-scroll": "^1.9.3",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.15"
   },
